--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Haki CDN — Uploader</title>
+  <link rel="icon" type="image/png" href="http://cdn-haki.zone.id/files/Rs64Lz.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     // Tailwind config
