--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Haki CDN — Uploader</title>
-  <link rel="icon" type="image/png" href="http://cdn-haki.zone.id/files/Rs64Lz.jpg">
+  <link rel="icon" type="image/png" href="/public/cloud.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     // Tailwind config
@@ -54,7 +54,7 @@
     <header class="sticky top-0 z-30 backdrop-blur supports-[backdrop-filter]:bg-gray-900/60 border-b border-gray-800">
       <div class="mx-auto max-w-6xl px-4 sm:px-6 py-3 flex items-center justify-between">
         <div class="flex items-center gap-2">
-          <div class="h-8 w-8 rounded-2xl bg-gradient-to-br from-brand-400 to-brand-700"></div>
+         <img src="/public/cloud.png" alt="Logo" class="h-8 w-8 object-contain" />
           <div class="font-black tracking-tight text-lg">Haki <span class="text-brand-400">CDN</span></div>
         </div>
         <div class="flex items-center gap-2">
@@ -507,23 +507,20 @@
 
     function completeUpload(id, row, file, url) {
       row.innerHTML = `
-        <div class='flex items-center gap-3 min-w-0'>
+        <div class='flex items-center gap-3 min-w-0 flex-1'>
           <div class='h-9 w-9 rounded-xl bg-green-900/30 grid place-items-center text-green-400'>
             <svg class='h-4 w-4' viewBox='0 0 24 24'><path fill='currentColor' d='M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z'/></svg>
           </div>
-          <div class='min-w-0'>
+          <div class='min-w-0 flex-1'>
             <div class='font-medium truncate'>${file.name}</div>
-            <div class='text-xs text-gray-500'>Uploaded · ${fmtBytes(file.size)}</div>
+            <div class='text-xs text-gray-500'>${fmtBytes(file.size)} • Ready to share</div>
           </div>
         </div>
-        <div class='sm:ml-auto w-full sm:w-1/2'>
-          <div class='flex items-center gap-2'>
-            <input readonly value='${url}' class='flex-1 text-xs rounded-xl border border-gray-800 bg-transparent px-3 py-2 truncate'/>
-            <button class='copyBtn text-xs px-3 py-2 rounded-xl bg-white text-gray-900 hover:opacity-90'>Copy</button>
-            <a href='${url}' target='_blank' class='text-xs px-3 py-2 rounded-xl border border-gray-800 hover:bg-gray-900'>Open</a>
-            <button class='removeBtn text-xs px-3 py-2 rounded-xl border border-red-900/50 text-red-600 hover:bg-red-950/30'>Remove</button>
-          </div>
-          <div class='mt-1.5 text-[11px] text-gray-500'>File successfully uploaded and ready to share.</div>
+        <div class='flex items-center gap-2 shrink-0'>
+          <input readonly value='${url}' class='w-32 sm:w-40 text-xs rounded-lg border border-gray-800 bg-transparent px-2 py-1 truncate'/>
+          <button class='copyBtn text-xs px-2 py-1 rounded-lg bg-white text-gray-900 hover:opacity-90 transition'>Copy</button>
+          <a href='${url}' target='_blank' class='text-xs px-2 py-1 rounded-lg border border-gray-800 hover:bg-gray-900 transition'>Open</a>
+          <button class='removeBtn text-xs px-2 py-1 rounded-lg border border-red-900/50 text-red-400 hover:bg-red-950/30 transition'>×</button>
         </div>
       `;
 
