--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Haki CDN — Uploader</title>
-  <link rel="icon" type="image/png" href="/public/cloud.png">
+  <link rel="icon" type="image/png" href="https://cdn-haki.zone.id/files/ZRl7j4.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     // Tailwind config
@@ -54,12 +54,12 @@
     <header class="sticky top-0 z-30 backdrop-blur supports-[backdrop-filter]:bg-gray-900/60 border-b border-gray-800">
       <div class="mx-auto max-w-6xl px-4 sm:px-6 py-3 flex items-center justify-between">
         <div class="flex items-center gap-2">
-         <img src="/public/cloud.png" alt="Logo" class="h-8 w-8 object-contain" />
+         <img src="https://cdn-haki.zone.id/files/ZRl7j4.png" alt="Logo" class="h-8 w-8 object-contain" />
           <div class="font-black tracking-tight text-lg">Haki <span class="text-brand-400">CDN</span></div>
         </div>
         <div class="flex items-center gap-2">
           <button id="docsBtn" class="inline-flex items-center gap-2 rounded-2xl border border-gray-800 px-3 py-1.5 text-sm hover:bg-gray-900">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-4 w-4"><path fill="currentColor" d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8zM14 8V2l6 6z"/></svg>
+            <svg xmlns="http://www.w3.sorg/2000/svg" viewBox="0 0 24 24" class="h-4 w-4"><path fill="currentColor" d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8zM14 8V2l6 6z"/></svg>
             Docs
           </button>
           <a href="#uploads" class="rounded-2xl border border-gray-800 px-3 py-1.5 text-sm hover:bg-gray-900">Uploads</a>
