--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Haki CDN — Uploader</title>
-  <link rel="icon" type="image/png" href="https://cdn-haki.zone.id/files/ZRl7j4.png">
+  <link rel="icon" type="image/png" href="/cloud.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     // Tailwind config
@@ -54,7 +54,7 @@
     <header class="sticky top-0 z-30 backdrop-blur supports-[backdrop-filter]:bg-gray-900/60 border-b border-gray-800">
       <div class="mx-auto max-w-6xl px-4 sm:px-6 py-3 flex items-center justify-between">
         <div class="flex items-center gap-2">
-         <img src="https://cdn-haki.zone.id/files/ZRl7j4.png" alt="Logo" class="h-8 w-8 object-contain" />
+         <img src="/cloud.png" alt="Logo" class="h-8 w-8 object-contain" />
           <div class="font-black tracking-tight text-lg">Haki <span class="text-brand-400">CDN</span></div>
         </div>
         <div class="flex items-center gap-2">
